--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red Dune - Authentic Maasai Products</title>
+    <title>Enkaji Crafts - Authentic Maasai Products</title>
   </head>
   <body>
     <div id="root"></div>
