modify index.html to support search engine optimization

--- a/index.html
+++ b/index.html
@@ -2,13 +2,106 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Enkaji Crafts - Authentic Maasai Products | Handcrafted accessories from Kenya
+    </title>
+    <meta
+      name="title"
+      content="Enkaji Crafts - Authentic Maasai Products | Handcrafted accessories from Kenya"
+    />
+    <meta
+      name="description"
+      content="Discover authentic Maasai handcrafted products directly from Kenya's indigenous artisans. Shop traditional jewelry, beadwork, accessories and home decor. Supporting Maasai communities and preserving cultural heritage."
+    />
+    <meta
+      name="keywords"
+      content="Maasai products, authentic African crafts, handmade jewelry, traditional beadwork, Kenya artisans, indigenous crafts, African jewelry, Maasai beads, cultural products, handcrafted accessories"
+    />
+    <meta name="author" content="Enkaji Crafts" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://enkajicrafts.co.ke/" />
+    <meta
+      property="og:title"
+      content="Enkaji Crafts - Authentic Maasai Products | Handcrafted Jewelry & Traditional Crafts from Kenya"
+    />
+    <meta
+      property="og:description"
+      content="Discover authentic Maasai handcrafted products directly from Kenya's indigenous artisans. Shop traditional jewelry, beadwork, accessories and home decor."
+    />
+    <meta property="og:image" content="https://enkajicrafts.co.ke/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Authentic Maasai handcrafted jewelry and traditional beadwork from Kenya"
+    />
+    <meta property="og:site_name" content="Enkaji Crafts" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://enkajicrafts.co.ke/" />
+    <meta
+      property="twitter:title"
+      content="Enkaji Crafts - Authentic Maasai Products | Handcrafted Jewelry & Traditional Crafts from Kenya"
+    />
+    <meta
+      property="twitter:description"
+      content="Discover authentic Maasai handcrafted products directly from Kenya's indigenous artisans. Shop traditional jewelry, beadwork, accessories and home decor."
+    />
+    <meta
+      property="twitter:image"
+      content="https://enkajicrafts.co.ke/twitter-image.jpg"
+    />
+    <meta
+      property="twitter:image:alt"
+      content="Authentic Maasai handcrafted jewelry and traditional beadwork from Kenya"
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="KE" />
+    <meta name="geo.placename" content="Kenya" />
+    <meta name="geo.position" content="-1.286389;36.817223" />
+    <meta name="ICBM" content="-1.286389, 36.817223" />
+
+    <!-- Business Information -->
+    <meta name="contact" content="enkajicrafts@gmail.com" />
+    <meta
+      name="subject"
+      content="Authentic Maasai Products and Traditional Crafts"
+    />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+
+    <!-- Favicon and Icons -->
     <link
       rel="icon"
       type="image/svg+xml"
       href="/src/assets/site-logo-svg.svg"
     />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#e61919" />
+    <meta name="msapplication-TileColor" content="#e61919" />
+
+    <!-- DNS Prefetch and Preconnect for Performance -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Font Loading Optimization -->
     <link
       href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
       rel="stylesheet"
@@ -21,11 +114,123 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enkaji Crafts - Authentic Maasai Products</title>
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://enkajicrafts.co.ke/" />
+
+    <!-- Structured Data for Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Enkaji Crafts",
+        "alternateName": "Enkaji Crafts",
+        "url": "https://enkajicrafts.co.ke",
+        "logo": "https://enkajicrafts.co.ke/logo.png",
+        "description": "Authentic Maasai handcrafted products directly from Kenya's indigenous artisans. Traditional jewelry, beadwork, accessories and home decor.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "KE",
+          "addressRegion": "Nairobi",
+          "addressLocality": "Nairobi"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+254-712-345-678",
+          "contactType": "Customer Service",
+          "email": "enkajicrafts@gmail.com"
+        },
+        "sameAs": [
+          "https://www.facebook.com/enkajicrafts",
+          "https://www.instagram.com/enkajicrafts",
+          "https://twitter.com/enkajicrafts"
+        ],
+        "foundingDate": "2020",
+        "foundingLocation": "Nairobi, Kenya",
+        "slogan": "Where Heritage Finds a Home",
+        "brand": {
+          "@type": "Brand",
+          "name": "Enkaji Crafts"
+        },
+        "makesOffer": {
+          "@type": "Offer",
+          "category": "Handmade Products"
+        }
+      }
+    </script>
+
+    <!-- Structured Data for Website -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Enkaji Crafts - Authentic Maasai Products",
+        "url": "https://enkajicrafts.co.ke",
+        "description": "Discover authentic Maasai handcrafted products directly from Kenya's indigenous artisans.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Enkaji Crafts"
+        },
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://enkajicrafts.co.ke/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        },
+        "inLanguage": "en-US",
+        "copyrightYear": "2025",
+        "copyrightHolder": {
+          "@type": "Organization",
+          "name": "Enkaji Crafts"
+        }
+      }
+    </script>
+
+    <!-- Structured Data for Local Business -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Enkaji Crafts",
+        "image": "https://enkajicrafts.co.ke/logo.png",
+        "description": "Authentic Maasai handcrafted products directly from Kenya's indigenous artisans. Traditional jewelry, beadwork, accessories and home decor.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "KE",
+          "addressRegion": "Nairobi",
+          "addressLocality": "Nairobi"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "-1.286389",
+          "longitude": "36.817223"
+        },
+        "telephone": "+254-712-345-678",
+        "email": "enkajicrafts@gmail.com",
+        "url": "https://enkajicrafts.co.ke",
+        "priceRange": "$20-$200",
+        "paymentAccepted": "Cash, Credit Card, PayPal",
+        "currenciesAccepted": "USD, KES",
+        "openingHours": "Mo-Fr 09:00-18:00, Sa 09:00-16:00",
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "156"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- Performance and Analytics -->
+    <script>
+      // Preload critical resources
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker.register("/sw.js");
+        });
+      }
+    </script>
   </body>
 </html>
